# graph_weather

./: .all-contributorsrc  .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .pylintrc  .ruff.toml  Dockerfile  LICENSE  Makefile  README.md  TODO.md  benchmark_graph_format.py  environment.yml  environment_cpu.yml  environment_cuda.yml  nb.ipynb  pixi.toml  pyproject.toml  requirements.txt  run_gencast.py  setup.py  test_efficient_batching.py  train_gencast.py
.github/workflows/: linters.yaml  release.yaml  workflows.yaml
OpenMeteo/: OpenMeteo_xr  fetch_OpenMeteo_data.py
docs/: graphcast_paper_compatibility.md  optimization_overview.md
graph_weather/: __init__.py  data_assimilation_implementation.md  example_usage.py  film.py  test_data_assimilation.py  utils.py
graph_weather/config/: gnn_config.yaml  wb_config.yaml  wb_config_atos.yaml  wb_config_ewc.yaml
graph_weather/configs/: features_default.yaml  test_features.yaml
graph_weather/data/: IFSAnalysis_dataloader.py  __init__.py  anemoi_dataloader.py  anemoi_dataloder.py  anemoi_graph_gen.py  assimilation_dataloader.py  bufr_process.py  const.py  constants.py  dataloader.py  dataset.py  gencast_dataloader.py  icosahedral_graph_gen.py  icoshedral_graph_gen.py  nnja_ai.py  nnjaai.py  nnjai_wrapp.py  openmeteo_fetcher.py  regional_dataset.py  sampler.py  test.py  wb_constants.py  wb_datamodule.py  wb_dataset.py  weather_station_reader.py
graph_weather/data/schema_for_bufr/: adpupa.py  base.py
graph_weather/models/: __init__.py  analysis.py  base.py  data_assimilation.py  evaluation.py  features.py  film.py  forecast.py  gnn.py  graphcast.py  losses.py  regional_forecast.py  training_loop.py  validation.py  visualization.py
graph_weather/models/ai_assimilation/: __init__.py  data.py  loss.py  model.py  training.py
graph_weather/models/atmorep/: __init__.py  config.py  inference.py
graph_weather/models/atmorep/data/: dataset.py  normalizer.py  sampler.py
graph_weather/models/atmorep/model/: atmorep.py  attention.py  decoder.py  field_transformer.py  multiformer.py  transformer.py
graph_weather/models/atmorep/training/: loss.py  train.py
graph_weather/models/atmorep/utils/: losses.py  uncertainity.py
graph_weather/models/aurora/: __init__.py  decoder.py  encoder.py  integration_layer.py  lora.py  model.py  processor.py
graph_weather/models/cafa/: __init__.py  config.py  decoder.py  encoder.py  factorize.py  model.py  processor.py
graph_weather/models/data_assimilation/: __init__.py  data_assimilation_base.py  interface.py  kalman_filter_da.py  particle_filter_da.py  variational_da.py
graph_weather/models/fengwu_ghr/: __init__.py  layers.py
graph_weather/models/fgn/: README.md  __init__.py  model.py
graph_weather/models/fgn/layers/: __init__.py  encoder.py  processor.py
graph_weather/models/gencast/: README.md  __init__.py  denoiser.py  noise_mse_loss.py  sampler.py  train.py  weighted_mse_loss.py
graph_weather/models/gencast/graph/: __init__.py  graph_builder.py  grid_mesh_connectivity.py  icosaedral_mesh.py  icosahedral_mesh.py  model_utils.py
graph_weather/models/gencast/layers/: __init__.py  decoder.py  encoder.py  modules.py  processor.py
graph_weather/models/gencast/layers/experimental/: __init__.py  sparse_processor.py  sparse_transformer.py
graph_weather/models/gencast/utils/: __init__.py  batching.py  noise.py  statistics.py
graph_weather/models/genda/: __init__.py  conditioning.py  model.py
graph_weather/models/graphcast/: __init__.py  model.py
graph_weather/models/graphs/: __init__.py  hexagonal.py  ico.py  utils.py
graph_weather/models/layers/: __init__.py  assimilator.py  assimilator_decoder.py  assimilator_encoder.py  constraint.py  constraint_layer.py  decoder.py  dynamic_graph_builder.py  encoder.py  film.py  gnn_blocks.py  graph_net_block.py  grid_to_points.py  multi_graph_net_block.py  normalization.py  points_to_grid.py  processor.py  stochastic_decomposition.py  stretched_latent_graph.py  stretched_mesh.py  thermalizer.py
graph_weather/models/utils/: Normalizer.py  gns_utils.py  losses.py  mgn_utils.py  utils.py
graph_weather/models/weathermesh/: __init__.py  decoder.py  encoder.py  encoders.py  layers.py  processor.py  weathermesh2.py
graph_weather/predict/: wb_predict.py
graph_weather/train/: wb_train.py  wb_trainer.py
graph_weather/utils/: __init__.py  config.py  constants.py  dask_utils.py  input_validation.py  logger.py
scratch/: pl_graph_weather.py  run.py  run_fulll.py  test_model.py
scratch/data/: dataloader.py
scripts/: benchmark_gradient_checkpointing.py  benchmark_memory.py  benchmark_memory_optimizations.py
tests/: test_ai_assimilation.py  test_anemoi.py  test_asme_loss.py  test_assimilator.py  test_atmorep.py  test_aurora.py  test_bufr.py  test_bufr_process.py  test_cafa.py  test_dataloader.py  test_dynamic_graph_builder.py  test_fgn.py  test_film.py  test_gencast.py  test_gencast_with_thermalizer.py  test_genda.py  test_icosahedral_graph.py  test_icoshedral_graph.py  test_input_validation.py  test_model.py  test_nnjai.py  test_regional_dataset.py  test_regional_forecast.py  test_stochastic_decomposition.py  test_stretched_latent_graph.py  test_stretched_mesh.py  test_thermalizer.py  test_weather_station_reader.py  test_weathermesh.py
tests/anemoi/: test_data.py  test_graph.py
tests/atmorep/: test_inference.py  test_loss.py  test_model.py  test_training.py
tests/bufr_process/: conftest.py  test_adpupa_schema.py  test_common.py  test_cris.py  test_dataloader.py  test_field_mapping.py  test_integration.py  test_nnja_schema.py  test_processor.py
tests/data/: __init__.py  test_openmeteo_fetcher.py
tests/models/: test_gradient_checkpointing.py
tests/models/data_assimilation/: test_da_interface.py  test_data_assimilation_base.py  test_kalman_da.py  test_particle_da.py  test_variational_da.py
tests/models/layers/: test_efficient_batching.py
train/: deepspeed_graph.py  era5.py  gencast_demo.ipynb  hf_forecasts.json  lora.py  pl_graph_weather.py  run.py  run_fulll.py  train_configurable.py  wb_train.py
